--- a/gestor/Makefile
+++ b/gestor/Makefile
@@ -4,4 +4,4 @@ rehacer:
 	./manage.py makemigrations; ./manage.py migrate; ./manage.py createsuperuser
 
 clean:
-	rm db.sqlite3; rm bd/migrations/0*.py
+	rm db.sqlite3; rm bd/migrations/0*.py; rm -rf gestor/fotos
